# awsrole

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml
awsrole/: __init__.py  awsrole.py
tests/: test_functions.py
